--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,6 +6,16 @@
 @import "./scss/footer";
 @import "./scss/layout";
 @import "./scss/pages/home";
+@import "./scss/pages/stand-upper";
+@import "./scss/pages/single-stand-upper";
+@import "./scss/pages/single-gostrol";
+@import "./scss/pages/single-news";
+@import "./scss/pages/single-program";
+@import "./scss/pages/single-video";
+@import "./scss/pages/program";
+@import "./scss/pages/about-center";
+@import "./scss/pages/mediateka";
+@import "./scss/pages/contacts";
 
 
 
