--- a/src/app/scss/_components.scss
+++ b/src/app/scss/_components.scss
@@ -1619,4 +1619,77 @@
       }
 }
 
+.heroSwiper{
+  position: absolute !important;
+  width: 80% !important;
+  top: 272px;
+  right: -20% !important;
+  
+  @media (max-width: 1100px) {
+    right: -30% !important; 
+
+  }
+  @media (max-width: 875px) {
+    right: -40% !important; 
+
+  }
+  @media (max-width: 768px) {
+    width: 100vw !important;
+    top: 100px;
+    right: -18px !important;
+  }
+ 
+  .swiper {
+    width: 100%;
+    height: 100%;
+    @media (max-width: 768px) {
+      width: 100vw !important;
+    }
+  }
+
+   .swiper-wrapper{
+    align-items: center;
+    min-height: 390px;
+    gap: 20px;
+    @media (max-width: 768px) {
+        min-height: 350px;
+       margin-left: calc( 25% - 180px ); 
+      }
+  }
+  .swiper-slide {
+    transition: all 0.3s ease;
+    min-height: 250px;
+    width: 180px;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0 !important;
+  }
+
+  .swiper-slide-active{
+    background: red !important;
+    min-height: 390px;
+    width: 281px !important;
+      @media (max-width: 768px) {
+        min-height: 350px;
+        width: 257px;
+      }
+  }
+  .swiper-slide-next{
+     @media (max-width: 768px) {
+      }
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 
