--- a/src/app/scss/_components.scss
+++ b/src/app/scss/_components.scss
@@ -1238,12 +1238,18 @@
 	}
 
       .modal {
-        padding: 0 16px;
-        background: rgba(0, 0, 0, 0.61);
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+            padding: 0 16px;
+            background: rgba(0, 0, 0, 0.61);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
 
 
@@ -1287,6 +1293,7 @@
 		// .team-modal__close-btn
 
 		&__close-btn {
+                  cursor: pointer;
 		}
 
 		// .team-modal__work
