--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,6 +12,7 @@
 @import "./scss/pages/single-news";
 @import "./scss/pages/single-program";
 @import "./scss/pages/single-video";
+@import "./scss/pages/single-audio";
 @import "./scss/pages/program";
 @import "./scss/pages/about-center";
 @import "./scss/pages/mediateka";
