--- a/src/app/scss/_components.scss
+++ b/src/app/scss/_components.scss
@@ -434,6 +434,7 @@
     background: white;
     border-radius: 8px;
     padding: 16px;
+    margin-bottom: 8px;
     
     &.active{
         border: 1px solid  #F59C2F;
