--- a/src/app/scss/_components.scss
+++ b/src/app/scss/_components.scss
@@ -1663,6 +1663,7 @@
     align-items: center;
     min-height: 390px;
     gap: 20px;
+    margin-bottom: 24px;
     @media (max-width: 768px) {
         min-height: 350px;
        margin-left: calc( 25% - 180px ); 
@@ -1691,6 +1692,9 @@
         min-height: 350px;
         width: 257px;
       }
+      .title, .subtitle,.overlay{
+        display: none !important;
+      }
   }
   .swiper-slide-next{
      @media (max-width: 768px) {
@@ -1702,6 +1706,29 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+  .swiper__buttons{
+      width: 180px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 24px;
+      margin-left: 50px;
+      @media (max-width: 768px) {
+            margin: 0 auto;   
+      }
+      &>*{
+            border-radius: 50%;
+            border: 1px solid rgba(255, 255, 255, 0.20);
+            background: rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(6px);
+            display: flex;
+            width: 48px;
+            height: 48px;
+            justify-content: center;
+            align-items: center;
+            color: white;
+      }
   }
 }
 
