--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -19,7 +19,11 @@
 @import "./scss/pages/contacts";
 
 
-
+.player{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
 
 .header {
   padding: 25px 0;
