--- a/src/app/scss/_components.scss
+++ b/src/app/scss/_components.scss
@@ -493,6 +493,12 @@
                   top: 50%;
                   left: 50%;
                   transform: translate(-50%, -50%);
+                  cursor: pointer;
+                  border-radius: 50%;
+                  transition: all 0.3s ease;
+                  &:hover{
+                      box-shadow: 0 0 0 2px white;
+                  }
             }
 
 		// .big-video__info
@@ -660,6 +666,11 @@
                   top: 50%;
                   left: 50%;
                   transform: translate(-50%, -50%);
+                  border-radius: 50%;
+                  transition: all 0.3s ease;
+                  &:hover{
+                      box-shadow: 0 0 0 2px white;
+                  }
             }
 
 		// .video-card__body
