--- a/src/app/scss/_components.scss
+++ b/src/app/scss/_components.scss
@@ -1028,8 +1028,12 @@
 
     .bredcrumbs {
 		// .bredcrumbs__list
-        
-
+            position: absolute;
+            top: 100px;
+            width: 100%;
+            z-index: 10;
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            padding: 12px 0;
 		&__list {
             display: flex;
             align-items: center;
