--- a/src/app/scss/pages/_single-gostrol.scss
+++ b/src/app/scss/pages/_single-gostrol.scss
@@ -21,10 +21,13 @@
 	
 			}
 			&__right {
-				@media (max-width:768px){
-					grid-template-columns: 1fr ;
-					grid-row: 1/2;
-				}
+				
+				
+				
+			}
+			&__right-items{
+				display: grid;
+				gap: 20px;
 			}
 	
 			// .page-layout__types
