add audio video recommend

--- a/src/app/scss/pages/_single-audio.scss
+++ b/src/app/scss/pages/_single-audio.scss
@@ -24,9 +24,12 @@
 	
 			}
 			&__right {
+				&-items{
+					display: grid;
+					gap: 20px;
+				}
 				@media (max-width:768px){
 					grid-template-columns: 1fr ;
-					grid-row: 1/2;
 				}
 			}
 	
