add recommend program

--- a/src/app/scss/pages/_single-program.scss
+++ b/src/app/scss/pages/_single-program.scss
@@ -21,9 +21,11 @@
 	
 			}
 			&__right {
+				.program__item.program-card{
+					margin-bottom: 20px;
+				}
 				@media (max-width:768px){
 					grid-template-columns: 1fr ;
-					grid-row: 1/2;
 				}
 			}
 	
