add locale to data from bekend

--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -89,6 +89,7 @@
 
     .lang {
         color: white;
+        text-transform: uppercase;
         @extend  %sm-600;
     }
     // .header__bredcrumbs
